--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -51,7 +51,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textLogin"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/pass_for"
+            app:srcCompat="@drawable/pw_reset"
             />
 
         <TextView
